--- a/packages/cmsdotgov/package.json
+++ b/packages/cmsdotgov/package.json
@@ -6,12 +6,20 @@
   "license": "APACHE-2.0",
   "type": "module",
   "scripts": {
-    "build": "yarn clean && tsc --project tsconfig.build.json",
+    "build": "yarn clean && tsup r4b/index.ts --format esm,cjs --out-dir dist/r4b --shims --dts --tsconfig tsconfig.build.json",
     "check": "prettier --check ./**/*.ts && eslint ./**/*.ts && tsc --noEmit",
     "clean": "rimraf dist/",
     "package:create": "node package.js pack",
     "package:publish": "node package.js publish",
     "test": "jest"
+  },
+  "exports": {
+    "./r4b": {
+      "types": "./r4b/index.d.ts",
+      "require": "./r4b/index.cjs",
+      "import": "./r4b/index.js",
+      "default": "./r4b/index.js"
+    }
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
@@ -31,6 +39,7 @@
     "jest": "^29.3.1",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
+    "tsup": "^6.6.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
