--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,13 +6,21 @@
   "license": "APACHE-2.0",
   "type": "module",
   "scripts": {
-    "build": "yarn clean && tsc --project tsconfig.build.json",
+    "build": "yarn clean && tsup r4b/index.ts --format esm,cjs --out-dir dist/r4b --shims --dts --tsconfig tsconfig.build.json",
     "check": "prettier --check ./**/*.ts && eslint ./**/*.ts && tsc --noEmit",
     "clean": "rimraf dist/",
     "codegen": "yarn workspace @bonfhir/codegen run dev run -d \"${PWD}/../../fhir/r4b/definitions/**/*.json\" -t \"${PWD}/r4b/**/*.hbs\" --helpers \"${PWD}/template-helpers.js\" -p 'prettier --write %files%'",
     "package:create": "node package.js pack",
     "package:publish": "node package.js publish",
     "test": "jest"
+  },
+  "exports": {
+    "./r4b": {
+      "types": "./r4b/index.d.ts",
+      "require": "./r4b/index.cjs",
+      "import": "./r4b/index.js",
+      "default": "./r4b/index.js"
+    }
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
@@ -22,18 +30,18 @@
     "@bonfhir/typescript-config": "^1.0.0",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
-    "@types/fhir": "^0.0.35",
     "@types/node": "^18.11.18",
     "@types/rimraf": "^3",
-    "date-fns": "^2.29.3",
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
     "jest-mock-extended": "^3.0.1",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
+    "tsup": "^6.6.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@types/fhir": "^0.0.35",
     "fhirpath": "^3.3.1",
     "html-entities": "^2.3.3"
   },
