--- a/packages/codegen/tsconfig.build.json
+++ b/packages/codegen/tsconfig.build.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "exclude": ["**/*.test.ts", "**/__fixtures__"],
   "compilerOptions": {
+    "incremental": false,
     "outDir": "dist"
   }
 }
