--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -13,6 +13,7 @@
     "check": "prettier --check ./src && eslint ./src && tsc --noEmit",
     "clean": "rimraf dist/",
     "dev": "ts-node --esm --swc --transpileOnly --experimental-specifier-resolution=node src/index.ts",
+    "format": "prettier --loglevel warn --write ./**/*.ts && eslint --fix ./**/*.ts",
     "package:create": "node package.js pack",
     "package:publish": "node package.js publish",
     "test": "jest"
