--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -14,8 +14,8 @@
     "clean": "rimraf dist/",
     "dev": "ts-node --esm --swc --transpileOnly --experimental-specifier-resolution=node src/index.ts",
     "format": "prettier --loglevel warn --write ./**/*.ts && eslint --fix ./**/*.ts",
-    "package:create": "node package.js pack",
-    "package:publish": "node package.js publish",
+    "package:create": "yarn build && node package.js pack",
+    "package:publish": "yarn build && node package.js publish",
     "test": "jest"
   },
   "packageManager": "yarn@3.3.1",
