--- a/packages/terminology/package.json
+++ b/packages/terminology/package.json
@@ -11,16 +11,8 @@
     "clean": "rimraf dist/",
     "codegen": "yarn workspace @bonfhir/codegen run dev run -d \"${PWD}/../../fhir/r4b/**/*.json\" -t \"${PWD}/r4b/**/*.ts.hbs\" --helpers \"${PWD}/template-helpers.js\" -p 'prettier --write %files%'",
     "format": "prettier --loglevel warn --write ./**/*.ts && eslint --fix ./**/*.ts",
-    "package:create": "node package.js pack",
-    "package:publish": "node package.js publish"
-  },
-  "exports": {
-    "./r4b": {
-      "types": "./r4b/index.d.ts",
-      "require": "./r4b/index.cjs",
-      "import": "./r4b/index.js",
-      "default": "./r4b/index.js"
-    }
+    "package:create": "yarn build && node package.js pack",
+    "package:publish": "yarn build && node package.js publish"
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
