--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,6 +23,8 @@
     "@bonfhir/typescript-config": "^1.0.0",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
+    "@types/fhir": "^0.0.35",
+    "@types/marked": "^4",
     "@types/node": "^18.11.18",
     "@types/rimraf": "^3",
     "eslint": "^8.30.0",
@@ -36,7 +38,8 @@
   "dependencies": {
     "@types/fhir": "^0.0.35",
     "fhirpath": "^3.3.1",
-    "html-entities": "^2.3.3"
+    "html-entities": "^2.3.3",
+    "marked": "^4.2.12"
   },
   "prettier": "@bonfhir/prettier-config"
 }
