--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -104,11 +104,9 @@
           "*.snap": "javascript"
         },
         "files.exclude": {
-          "**/node_modules": true,
-          "**/.parcel-cache": true,
-          "**/.yarn": true,
-          "**/tsconfig.tsbuildinfo": true
+          "**/.yarn": true
         },
+        "explorer.excludeGitIgnore": true,
         "git.branchProtection": ["main"],
         "json.schemas": [
           {
