--- a/packages/ui-components-antd/package.json
+++ b/packages/ui-components-antd/package.json
@@ -1,28 +1,25 @@
 {
-  "name": "@bonfhir/ehr-sample-app",
-  "description": "Bonfhir Sample app",
+  "name": "@bonfhir/ui-components-antd",
+  "description": "Antd adapter package for Bonfhir.",
   "version": "0.1.0-alpha.1",
-  "private": true,
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
   "scripts": {
-    "dev": "parcel serve --open",
-    "build": "parcel build",
+    "build": "yarn clean && tsup r4b/index.tsx --format esm,cjs --out-dir dist/r4b --shims --dts --tsconfig tsconfig.build.json && yarn build:ladle",
+    "build:ladle": "ladle build --stories='./**/*.stories.tsx' --outDir dist-ladle/ --base /ui-components/dist-ladle",
     "check": "prettier --check ./**/*.tsx && eslint ./**/*.tsx && tsc --noEmit",
-    "clean": "rimraf dist/",
+    "clean": "rimraf dist/ dist-ladle/",
+    "dev": "ladle serve --stories='./**/*.stories.tsx'",
     "format": "prettier --loglevel warn --write ./**/*.tsx && eslint --fix ./**/*.tsx",
+    "package:create": "yarn build && node package.js pack",
+    "package:publish": "yarn build && node package.js publish",
     "test": "jest"
-  },
-  "source": "src/index.html",
-  "targets": {
-    "default": {
-      "distDir": "./dist"
-    }
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
     "@bonfhir/eslint-config": "^1.0.0",
+    "@bonfhir/medplum": "^1.0.0-alpha.9",
     "@bonfhir/prettier-config": "^1.0.0",
     "@bonfhir/typescript-config": "^1.0.0",
     "@swc/core": "^1.3.24",
@@ -33,31 +30,25 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/rimraf": "^3",
-    "@types/styled-components": "^5",
-    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.30.0",
+    "fetch-vcr": "^3.2.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-mock-extended": "^3.0.1",
-    "parcel": "^2.8.3",
     "prettier": "^2.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
+    "tsup": "^6.6.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@bonfhir/core": "^1.0.0-alpha.8",
-    "@bonfhir/fhir-query": "^0.1.0-alpha.1",
-    "@bonfhir/medplum": "^1.0.0-alpha.9",
-    "@bonfhir/ui-components-antd": "^0.1.0-alpha.1",
-    "@medplum/core": "^2.0.1",
-    "@tanstack/react-query": "^4.24.4",
-    "@tanstack/react-query-devtools": "^4.24.4",
-    "antd": "^5.1.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "styled-components": "^5.3.6"
+    "@bonfhir/ui-components": "^0.1.0-alpha.1",
+    "antd": "^5.1.7"
   },
-  "prettier": "@bonfhir/prettier-config"
+  "prettier": "@bonfhir/prettier-config",
+  "peerDependencies": {
+    "react": "*",
+    "react-dom": "*"
+  }
 }
