--- a/samples/ehr-sample-app/package.json
+++ b/samples/ehr-sample-app/package.json
@@ -55,6 +55,7 @@
     "antd": "^5.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "styled-components": "^5.3.6"
