--- a/samples/ehr-sample-app/package.json
+++ b/samples/ehr-sample-app/package.json
@@ -25,6 +25,8 @@
     "@bonfhir/eslint-config": "^1.0.0",
     "@bonfhir/prettier-config": "^1.0.0",
     "@bonfhir/typescript-config": "^1.0.0",
+    "@parcel/reporter-bundle-analyzer": "^2.8.3",
+    "@parcel/reporter-bundle-buddy": "^2.8.3",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
     "@testing-library/react": "^13.4.0",
