--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@types/fhir": "^0.0.35",
+    "localized-address-format": "^1.3.0",
     "marked": "^4.2.12"
   },
   "prettier": "@bonfhir/prettier-config"
