--- a/samples/ehr-sample-app/package.json
+++ b/samples/ehr-sample-app/package.json
@@ -48,8 +48,9 @@
     "@bonfhir/core": "^1.0.0-alpha.8",
     "@bonfhir/fhir-query": "^0.1.0-alpha.1",
     "@bonfhir/medplum": "^1.0.0-alpha.9",
+    "@bonfhir/terminology": "^1.0.0-alpha.3",
     "@bonfhir/ui-components": "^0.1.0-alpha.1",
-    "@medplum/core": "^2.0.1",
+    "@medplum/core": "^2.0.3",
     "@tanstack/react-query": "^4.24.4",
     "@tanstack/react-query-devtools": "^4.24.4",
     "antd": "^5.1.7",
