--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -11,6 +11,7 @@
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-lodash": "^7.4.0",
     "eslint-plugin-prettier": "^4.2.1"
   },
   "devDependencies": {
