--- a/packages/typescript-config/tsconfig.json
+++ b/packages/typescript-config/tsconfig.json
@@ -5,7 +5,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
-    "module": "ES2020",
+    "module": "es2022",
     "moduleResolution": "node",
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
@@ -14,6 +14,6 @@
     "skipLibCheck": true,
     "strict": true,
     "sourceMap": true,
-    "target": "ES2020"
+    "target": "ES2022"
   }
 }
