--- a/samples/ehr-sample-app/package.json
+++ b/samples/ehr-sample-app/package.json
@@ -45,7 +45,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@bonfhir/antd": "0.0.0",
+    "@bonfhir/antd": "^0.1.0-alpha.0",
     "@bonfhir/core": "^1.0.0-alpha.8",
     "@bonfhir/fhir-query": "^0.1.0-alpha.1",
     "@bonfhir/medplum": "^1.0.0-alpha.9",
