--- a/samples/ehr-sample-app/package.json
+++ b/samples/ehr-sample-app/package.json
@@ -22,9 +22,9 @@
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
-    "@bonfhir/eslint-config": "^1.0.0",
+    "@bonfhir/eslint-config": "^1.1.0-alpha.0",
     "@bonfhir/prettier-config": "^1.0.0",
-    "@bonfhir/typescript-config": "^1.0.0",
+    "@bonfhir/typescript-config": "^1.0.1-alpha.0",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
     "@testing-library/react": "^13.4.0",
