--- a/packages/subscriptions-koa/package.json
+++ b/packages/subscriptions-koa/package.json
@@ -1,46 +1,49 @@
 {
-  "name": "@bonfhir/sample-api",
-  "description": "Bonfhir Sample api",
+  "name": "@bonfhir/subscriptions-koa",
+  "description": "KOA adapter for bonfhir subscriptions.",
   "version": "0.1.0-alpha.1",
-  "private": true,
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --watch src -e ts --exec ts-node --esm --swc --transpileOnly --experimental-specifier-resolution=node src/index.ts",
+    "build": "yarn clean && tsup r4b/index.ts --format esm,cjs --out-dir dist/r4b --shims --dts --tsconfig tsconfig.build.json",
     "check": "prettier --check ./**/*.ts && eslint ./**/*.ts && tsc --noEmit",
     "clean": "rimraf dist/",
-    "format": "prettier --loglevel warn --write ./**/*.ts && eslint --fix ./**/*.ts"
+    "format": "prettier --loglevel warn --write ./**/*.ts && eslint --fix ./**/*.ts",
+    "package:create": "yarn build && node package.js pack",
+    "package:publish": "yarn build && node package.js publish",
+    "test": "jest"
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
+    "@bonfhir/codegen": "^1.0.0-alpha.3",
     "@bonfhir/eslint-config": "^1.1.0-alpha.0",
     "@bonfhir/prettier-config": "^1.0.0",
     "@bonfhir/typescript-config": "^1.0.1-alpha.0",
+    "@koa/router": "^12.0.0",
+    "@swc/cli": "^0.1.59",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
     "@types/fhir": "^0.0.35",
     "@types/koa": "^2",
-    "@types/koa-bodyparser": "^4",
     "@types/koa__router": "^12",
     "@types/node": "^18.11.18",
     "@types/rimraf": "^3",
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
-    "nodemon": "^2.0.21",
+    "koa": "^2.14.1",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.9.1",
+    "tsup": "^6.6.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@bonfhir/core": "^1.0.0-alpha.8",
-    "@bonfhir/medplum": "^1.0.0-alpha.9",
-    "@bonfhir/subscriptions": "^0.1.0-alpha.1",
-    "@koa/router": "^12.0.0",
-    "@medplum/core": "^2.0.3",
-    "koa": "^2.14.1",
-    "koa-bodyparser": "^4.3.0"
+    "@bonfhir/core": "^1.0.0-alpha.12",
+    "@bonfhir/subscriptions": "^0.1.0-alpha.2"
+  },
+  "peerDependencies": {
+    "@koa/router": ">=12.0.0",
+    "koa": "^2.0.0"
   },
   "prettier": "@bonfhir/prettier-config"
 }
