--- a/packages/subscriptions/package.json
+++ b/packages/subscriptions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bonfhir/subscriptions",
-  "description": "API / KOA helper to setup and handle FHIR subscriptions.",
+  "description": "Setup and handle FHIR subscriptions.",
   "version": "0.1.0-alpha.2",
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
@@ -20,18 +20,14 @@
     "@bonfhir/eslint-config": "^1.1.0-alpha.0",
     "@bonfhir/prettier-config": "^1.0.0",
     "@bonfhir/typescript-config": "^1.0.1-alpha.0",
-    "@koa/router": "^12.0.0",
     "@swc/cli": "^0.1.59",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
     "@types/fhir": "^0.0.35",
-    "@types/koa": "^2",
-    "@types/koa__router": "^12",
     "@types/node": "^18.11.18",
     "@types/rimraf": "^3",
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
-    "koa": "^2.14.1",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
     "tsup": "^6.6.2",
@@ -39,10 +35,6 @@
   },
   "dependencies": {
     "@bonfhir/core": "^1.0.0-alpha.12"
-  },
-  "peerDependencies": {
-    "@koa/router": ">12.0.0",
-    "koa": "^2.0.0"
   },
   "prettier": "@bonfhir/prettier-config"
 }
