fix: :white_check_mark: fix failing unit tests on node 18.15.0
Apparently, there has been a change in 18.15.0 on the character output
by the Intl API.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,8 @@
 FROM mcr.microsoft.com/devcontainers/typescript-node:0-18-bullseye
 
+# Let's make sure to use a supported version of node
+RUN su node -c "source /usr/local/share/nvm/nvm.sh && nvm install 18.15.0 && nvm use 18.15.0"
+
 # Default ZSH configuration only load the git plugin. This adds yarn as well.
 RUN su node -c "sed -i 's/plugins=(git)/plugins=(git yarn)/' ~/.zshrc"
 
