--- a/packages/subscriptions/package.json
+++ b/packages/subscriptions/package.json
@@ -11,7 +11,8 @@
     "clean": "rimraf dist/",
     "format": "prettier --loglevel warn --write ./**/*.ts && eslint --fix ./**/*.ts",
     "package:create": "yarn build && node package.js pack",
-    "package:publish": "yarn build && node package.js publish"
+    "package:publish": "yarn build && node package.js publish",
+    "test": "jest"
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
@@ -21,6 +22,8 @@
     "@bonfhir/typescript-config": "^1.0.1-alpha.1",
     "@types/fhir": "^0.0.35",
     "@types/node": "^18.15.3",
+    "esbuild": "^0.17.12",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^8.36.0",
     "jest": "^29.5.0",
     "prettier": "^2.8.4",
