chore: :wrench: disable NX and Yarn telemetry on the project

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -116,6 +116,7 @@
             "url": "./fhir/r4b/definitions/fhir.schema.json"
           }
         ],
+        "nxConsole.enableTelemetry": false,
         "terminal.integrated.defaultProfile.linux": "zsh"
       }
     }
