--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,21 +1,20 @@
+enableTelemetry: 0
+
 nodeLinker: node-modules
 
 packageExtensions:
   "@docsearch/react@*":
     dependencies:
       "@algolia/client-search": ">= 4.9.1 < 6"
-
-  "@parcel/optimizer-image@*":
-    dependencies:
-      "@parcel/core": "*"
-  
-  "@parcel/types@*":
-    dependencies:
-      "@parcel/core": "*"
-
   "@nrwl/devkit@*":
     dependencies:
       typescript: ^3 || ^4
+  "@parcel/optimizer-image@*":
+    dependencies:
+      "@parcel/core": "*"
+  "@parcel/types@*":
+    dependencies:
+      "@parcel/core": "*"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
