--- a/packages/fhir-query/package.json
+++ b/packages/fhir-query/package.json
@@ -20,7 +20,7 @@
     "@bonfhir/medplum": "^1.0.0-alpha.15",
     "@bonfhir/prettier-config": "^1.0.1-alpha.0",
     "@bonfhir/typescript-config": "^1.0.1-alpha.1",
-    "@medplum/core": "^2.0.7",
+    "@medplum/core": "2.0.14",
     "@tanstack/react-query": "^4.24.4",
     "@testing-library/react": "^13.4.0",
     "@types/fhir": "^0.0.35",
