--- a/packages/medplum/package.json
+++ b/packages/medplum/package.json
@@ -19,7 +19,7 @@
     "@bonfhir/eslint-config": "^1.1.0-alpha.1",
     "@bonfhir/prettier-config": "^1.0.1-alpha.0",
     "@bonfhir/typescript-config": "^1.0.1-alpha.1",
-    "@medplum/core": "^2.0.7",
+    "@medplum/core": "2.0.14",
     "@types/node": "^18.15.3",
     "esbuild": "^0.17.12",
     "esbuild-jest": "^0.5.0",
