--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -22,7 +22,7 @@
     "@bonfhir/prettier-config": "^1.0.1-alpha.0",
     "@bonfhir/typescript-config": "^1.0.1-alpha.1",
     "@ladle/react": "^2.10.1",
-    "@medplum/core": "^2.0.7",
+    "@medplum/core": "2.0.14",
     "@swc/core": "^1.3.41",
     "@swc/jest": "^0.2.24",
     "@tanstack/react-query": "^4.24.4",
