--- a/samples/sample-api-lambda/package.json
+++ b/samples/sample-api-lambda/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bonfhir/sample-api-koa",
+  "name": "@bonfhir/sample-api-lambda",
   "description": "Bonfhir Sample api",
   "version": "0.1.0-alpha.1",
   "private": true,
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
     "rimraf": "^4.4.0",
+    "serverless-offline": "^12.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
   },
