--- a/samples/sample-api-lambda/package.json
+++ b/samples/sample-api-lambda/package.json
@@ -11,7 +11,7 @@
     "check": "prettier --check ./**/*.ts && eslint ./**/*.ts && tsc --noEmit",
     "clean": "rimraf dist/",
     "format": "prettier --loglevel warn --write ./**/*.ts && eslint --fix ./**/*.ts",
-    "test": "serverless-bundle test",
+    "test": "jest",
     "offline": "node --inspect /workspace/node_modules/serverless/bin/serverless.js offline",
     "invoke": "node --inspect /workspace/node_modules/serverless/bin/serverless.js invoke local -f fhir"
   },
@@ -20,22 +20,20 @@
     "@bonfhir/eslint-config": "^1.1.0-alpha.0",
     "@bonfhir/prettier-config": "^1.0.0",
     "@bonfhir/typescript-config": "^1.0.1-alpha.0",
-    "@swc/core": "^1.3.41",
-    "@swc/jest": "^0.2.24",
+    "@swc/core": "^1.3.60",
+    "@swc/jest": "^0.2.26",
     "@types/fhir": "^0.0.35",
-    "@types/jest": "^29.5.1",
     "@types/node": "^18.15.3",
     "@types/serverless": "^3",
     "esbuild": "^0.17.19",
     "eslint": "^8.36.0",
-    "jest": "29.1.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
     "rimraf": "^4.4.0",
     "serverless": "^3.31.0",
     "serverless-bundle": "^6.0.0",
     "serverless-offline": "^12.0.4",
-    "ts-jest": "29.1.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
